Bug 1270174 - Scope SVG ID references in content inserted via Document.insertAnonymousContent() to the inserted element. r=smaug